--- a/server/store/inventory/templates/index.html
+++ b/server/store/inventory/templates/index.html
@@ -13,9 +13,10 @@
                 <h5 class="title is-5"> Search</h5>
                 <div class="sb field">
                     <div class="control is-loading">
-                        <input class="input" type="text" placeholder="Normal loading input">
-                    </div>
+                        <input class="input" type="text" placeholder="Normal loading input">                        
+                    </div>                    
                 </div>
+                <button class="button is-focused">Search</button>
             </div>
             <div class="articles-container">
                 {% for item in articles %}
