--- a/server/store/inventory/templates/base.html
+++ b/server/store/inventory/templates/base.html
@@ -26,7 +26,7 @@
         <header>
             <nav class="navbar is-warning" role="navigation" aria-label="main navigation">
                 <div class="navbar-brand">
-                    <a class="navbar-item" href="https://bulma.io">
+                    <a class="navbar-item" href="#">
                         <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
                     </a>
 
@@ -48,20 +48,11 @@
                             Inventory
                             <i class="menu-icon gg-stack"></i>
                         </a>
-                        <div class="navbar-item has-dropdown is-hoverable">
-                            <a class="navbar-link">
-                                More
-                            </a>
-
-                            <div class="navbar-dropdown">
-                                <a class="navbar-item">
-                                    About
-                                </a>
-                                <a class="navbar-item">
-                                    Jobs
-                                </a>
-                            </div>
-                        </div>
+                        <a href="/search" class="navbar-item">
+                            Search
+                            <i class="menu-icon gg-search"></i>
+                        </a>
+                        
 
 
                     </div>
