Added readme and prepare script

--- a/server/store/inventory/templates/dashboard.html
+++ b/server/store/inventory/templates/dashboard.html
@@ -102,10 +102,11 @@
                 <button class="delete" aria-label="delete"></button>
             </div>
             <div class="message-body">
+                <a target="_blank" href="http://127.0.0.1:8000/admin/" class="button is-danger is-focused">Admin home</a>
                 <a target="_blank" href="http://127.0.0.1:8000/admin/auth/user/" class="button is-focused">User management</a>
                 <a target="_blank" href="http://localhost:8000/admin/auth/group/" class="button is-primary is-focused">User groups</a>
                 <a target="_blank" href="http://localhost:8000/admin/inventory/article/" class="button is-link is-focused">Advanced Article management</a>
-                <a target="_blank" href="http://localhost:8000/admin/inventory/baskets/" class="button is-info is-focused">User Baskets</a>
+                <a target="_blank" href="http://localhost:8000/admin/inventory/basket/" class="button is-info is-focused">User Baskets</a>
                 <a target="_blank" href="http://localhost:8000/admin/inventory/articlecategory/" class="button is-success is-focused">Article categories</a>
                 <a target="_blank" href="http://localhost:8000/admin/inventory/articlekind/" class="button is-warning is-focused">Article kinds</a>
                 <a target="_blank" href="http://localhost:8000/admin/inventory/storearticle/" class="button is-danger is-focused">Store articles</a>
